# boilerplate

./: .dockerignore  .env.example  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  sonar-project.properties  tsconfig.base.json
.claude/: skills.json
.devin/: wiki.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  weekly-security.yml
.husky/: pre-commit
apps/ai/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/ai/boilerplate_knowledge_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/ai/knowledge_ai/: __init__.py  graph.py  main.py  mcp.py  models.py  storage.py
apps/api/: Dockerfile  README.md  eslint.config.mjs  nest-cli.json  package.json
apps/mobile/: App.tsx  package.json
apps/web/: .env.example  eslint.config.js  index.html  package.json  vite.config.ts
docs/: BPQL.md  local-setup.md  multi-tenant-modular-boilerplate-architecture.md  query-performance-audit.md  roadmap-and-issues.md  runbook.md  setup-sh-scenarios.md  soc2-audit-report.md
docs/modules/: bpql.md  departments.md  documents.md  employees.md  index.md  notes.md  tasks.md
drizzle/core/: 0001_init.sql  0002_add_super_admin.sql  0003_platform_sessions_and_impersonation.sql  0004_add_tenant_branding.sql  0005_menu_preferences.sql  0006_tenant_rbac.sql  0007_add_tenant_settings_json.sql  (+1 more)
scripts/: create-boilerplate.js  generate-dev-certs.sh  release-version.js  rename-project.js  seed-bpql-dummy.ts
scripts/debug/: package.json  (+46 more)
(+521 files in other folders)
